...
    <string name="app_title" translatable="false">Aisleron</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Aisleron</string>
    <string name="nav_header_subtitle">Fly through the shops!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_in_stock">Home Stock</string>
    <string name="menu_needed">Needed</string>
    <string name="menu_all_items">All Items</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_all_shops">All Shops</string>
...
